--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "DevTools API Inspector",
+    "name": "API Insight",
     "version": "1.0",
-    "description": "A unified interface to capture, analyze, and debug network traffic directly in DevTools.",
+    "description": "A professional API inspection tool for Chrome DevTools.",
     "devtools_page": "devtools.html",
     "permissions": [
         "tabs",
@@ -19,6 +19,6 @@
         "type": "module"
     },
     "content_security_policy": {
-        "extension_pages": "script-src 'self'; object-src 'self'; style-src 'self' 'unsafe-inline'"
+        "extension_pages": "script-src 'self'; object-src 'self'"
     }
 }
